# Django-MailManager

./: data_groups.json  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_owner.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailmanager/: apps.py  forms.py  models.py  services.py  urls.py  views.py  views_services.py
mailmanager/management/commands/: fill_data.py  start_task.py
mailmanager/migrations/: 0001_initial.py  0002_initial.py  0003_rename_sendmail_letter.py  0004_alter_letter_options_alter_sendattempt_options_and_more.py  0005_alter_letter_date_time_send.py  0006_alter_sendattempt_options_and_more.py  0007_sendattempt_attempts_count_sendattempt_client_and_more.py  0008_alter_sendattempt_options.py
mailmanager/templates/mailmanager/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  letter_confirm_delete.html  letter_detail.html  letter_form.html  letter_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  sendattempt_list.html
mailmanager/templates/mailmanager/includes/: footer.html  header.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: create_moder.py  create_users.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  restore_password.html  user_form.html  user_login.html  user_registration.html
