[tool.poetry]
name = "django-project-send-mail"
version = "0.1.0"
description = ""
authors = ["Sumerian <shemerov.s@yandex.ru>"]
readme = "README.md"
packages = [{include = "django_project_send_mail"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
