[tool.poetry]
name = "django-project-send-mail"
version = "0.1.0"
description = ""
authors = ["Sumerian <shemerov.s@yandex.ru>"]
readme = "README.md"
packages = [{include = "django_project_send_mail"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
apscheduler = "^3.10.4"
redis = "^5.0.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
